Modified Html file

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Template Three</title>
-    <link rel="shortcut icon" href="imgs/landing.jpg" />
     <meta charset="UTF-8" />
+    <title>Silvador</title>
+    <link rel="shortcut icon" href="imgs/icon.png" />
     <meta name="description" content="Welcome to our website" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
